removing overflow in form-sections, to fix scroll into view.

--- a/lab/xsaas/app/audiences/audience-form.scss
+++ b/lab/xsaas/app/audiences/audience-form.scss
@@ -56,6 +56,7 @@ $overviewBackground : rgba(255, 255, 255, 0.3);
     min-height: $formLineHeight;
     margin-bottom: 10px;
     min-width: 500px;
+    overflow: hidden;
 
     label.name, input.value{
       height: $formLineHeight;
